--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					customer experience, and overall efficiency.
 				</p>
 				<!-- Stats -->
-				<ul class="main__stats" role="list">
+				<ul class="main__stats">
 					<li class="main__stats-item"><span class="main__stats-number">10k+</span>companies</li>
 					<li class="main__stats-item"><span class="main__stats-number">314</span>templates</li>
 					<li class="main__stats-item"><span class="main__stats-number">12M+</span>queries</li>
