--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Preload css -->
 		<link rel="preload" href="./css/style.min.css" as="style" />
 		<!-- Css -->
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/style.min.css" />
 		<!-- Preload fonts -->
 		<link rel="preload" href="fonts/LexendDeca-Regular.woff" as="font" type="font/woff" crossorigin />
 		<link rel="preload" href="fonts/Inter-Regular.woff" as="font" type="font/woff" crossorigin />
