--- a/index.html
+++ b/index.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- 1) Characters and symbols -->
 		<meta charset="UTF-8" />
-		<!-- Displays site properly based on user's device -->
+		<!-- 2) Displays site properly based on user's device -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- Favicon -->
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-		<!-- Title -->
-		<title>Frontend Mentor | Stats preview card component</title>
-		<!-- Preload css -->
-		<link rel="preload" href="./css/style.min.css" as="style" />
-		<!-- Css -->
-		<link rel="stylesheet" href="./css/style.min.css" />
-		<!-- Preload fonts -->
+		<!-- 3) Preload fonts -->
 		<link rel="preload" href="fonts/LexendDeca-Regular.woff" as="font" type="font/woff" crossorigin />
 		<link rel="preload" href="fonts/Inter-Regular.woff" as="font" type="font/woff" crossorigin />
 		<link rel="preload" href="fonts/Inter-Bold.woff" as="font" type="font/woff" crossorigin />
 		<link rel="preload" href="fonts/LexendDeca-Regular.woff2" as="font" type="font/woff2" crossorigin />
 		<link rel="preload" href="fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin />
 		<link rel="preload" href="fonts/Inter-Bold.woff2" as="font" type="font/woff2" crossorigin />
+		<!-- 4) Preload css -->
+		<link rel="preload" href="./css/style.min.css" as="style" />
+		<!-- 5) Title -->
+		<title>Frontend Mentor | Stats preview card component</title>
+		<!-- 6) Favicon -->
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+		<!-- 7) Author -->
+		<meta name="author" content="Valeri Makaridze" />
+		<!-- 8) Description -->
+		<meta name="description" content="Stats preview card component challenge on Frontend Mentor" />
+		<!-- 9) Keywords -->
+		<meta name="keywords" content="front-end mentor, Valeri Makaridze, Stats preview card, challenge" />
+		<!-- 10) Theme color -->
+		<meta name="theme-color" content="#1b1938" />
+		<!-- 11) Facebook open graph -->
+		<meta property="og:title" content="Stats preview card component" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Stats preview card component challenge on Frontend Mentor" />
+		<meta
+			property="og:image"
+			content="https://stats-preview-card-component-frontend-mentor.netlify.app/screenshot-desktop.png"
+		/>
+		<meta property="og:image:alt" content="Stats preview card component" />
+		<meta property="og:url" content="https://stats-preview-card-component-frontend-mentor.netlify.app/" />
+		<!-- 12) Twitter card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Stats preview card component" />
+		<meta
+			name="twitter:description"
+			content="Stats preview card component challenge on Frontend Mentor"
+		/>
+		<meta name="twitter:site" content="@Valeri79125128" />
+		<meta
+			name="twitter:image"
+			content="https://stats-preview-card-component-frontend-mentor.netlify.app/screenshot-desktop.png"
+		/>
+		<meta property="twitter:image:alt" content="Stats preview card component" />
+		<meta name="twitter:creator" content="@Valeri79125128" />
+		<!-- 13) Css -->
+		<link rel="stylesheet" href="./css/style.min.css" />
 	</head>
 	<body>
 		<!-- Card -->
